--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -22,7 +22,7 @@
         packages = ["toml"]
     </py-config>
     
-    <py-script src="static/challenge_builder.py"></py-script>
+    <py-script src="./static/challenge_builder.py"></py-script>
 
     
     <div class="container">
