--- a/templates/validator/index.html
+++ b/templates/validator/index.html
@@ -53,6 +53,7 @@
 		<marquee behavior="scroll" direction="">
 			<h1>SoTB2023 BYOCTF Challenge Validator</h1>
 		</marquee>
+		<h3>checkout the new <a href="/creator">byoctf challenge creator</a></h3>
 		<form>
 			<textarea name="challenge" id="challenge" cols="60" rows="20"
 				placeholder="Paste your challenge toml here..."></textarea>
