--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4">SOTB2023 BYOCTF Challenge Builder</h1>
-            <p class="lead">This is a simple tool to help you create the toml file for byoctf. <a href=""/>Validate your challenge here!</a></p>
+            <p class="lead">This is a simple tool to help you create the toml file for byoctf. <a href="/">Validate your challenge here!</a></p>
         </div>
         <div id="inputDiv">
             <form onclick="return false">
