--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -28,20 +28,27 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4">SOTB2023 BYOCTF Challenge Builder</h1>
-            <p class="lead">This is a simple tool to help you create the toml file for byoctf. <a href="/">Validate your challenge here!</a></p>
+            <p class="lead">
+                This is a simple tool to help you create the toml file for byoctf.
+                <a href="/">Validate your challenge here!</a><br>
+                Need help understanding what makes a good challenge? See <a href="https://github.com/ShyftXero/byoctf_discord#notes-or-guidance-for-developing-challenges">notes or guidance for developing challenges</a>
+            </p>
         </div>
         <div id="inputDiv">
             <form onclick="return false">
                 <p>
                     <h5>Author Discord ID</h5>
-                    <input type="text" class="form-control" name="author" id="author" placeholder="Enter author discord id">
                     <small id="authorhelp" class="form-text text-muted">Be sure to include your discriminator (e.g. shyft#0760)</small>
+                    <input type="text" class="form-control" name="author" id="author" placeholder="Enter author discord id">
+                    
                 </p>
                 <p>
                     <h5>Challenge Title</h5>
+                    <small id="title_help" class="form-text text-muted">Make it catchy.</small>
                     <input type="text" class="form-control" name="title" id="title" placeholder="Title">
                 </p>
                 <h5>Challenge Description</h5>
+                <small id="desc_help" class="form-text text-muted">The should provided everything a player needs; links to files or sites and enough description to get started. Remember, you can't edit your challenge once you post it.</small>
                 <p>
                     
                     <textarea class='form-control' name="description" id="description"  rows="5" width="100%" placeholder="Challenge description here..."></textarea>
@@ -50,24 +57,28 @@
                 <!-- tags -->
                 <p>
                     <h5>Challenge Tags</h5>
-                    <input type="text" class="form-control" name="tags" id=tags placeholder="Tags">
                     <small id="taghelp" class="form-text text-muted">Comma separated list of single-word or hyphenated-word that represent the category. use singular form if applicable . e.g. "pentest, api, web"</small>
+                    <input type="text" class="form-control" name="tags" id=tags placeholder="Tags">
+                    
                 </p>
                 <!-- dependencies -->
                 <p>
                     <h5>Challenge Dependencies</h5>
-                    <input type="text" class="form-control" name="depends_on" id="depends_on" placeholder="Depends on">
                     <small id="depends_on" class="form-text text-muted">comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
+                    <input type="text" class="form-control" name="depends_on" id="depends_on" placeholder="Depends on">
+                    
                 </p>
 
                 <!-- flags -->
                 <h5>Flags</h5>
+                <small id="flag_help" class="form-text text-muted">The challenge value is the sum of the individual flag values.</small>
                 <div id="flag_div" class="card">
                     <p></p>
                 </div>
 
                 <!-- hints -->
                 <h5>Hints</h5>
+                <small id="hint_help" class="form-text text-muted">Hints are ordered and purchased by cost; lowest hints first. A big nudge should be a big cost. a little nudge should be a little cost.</small>
                 <div id="hint_div" class="card">
                     <p></p>
                 </div>
