--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -64,7 +64,7 @@
                 <!-- dependencies -->
                 <p>
                     <h5>Challenge Dependencies</h5>
-                    <small id="depends_on" class="form-text text-muted">comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
+                    <small id="depends_on" class="form-text text-muted">Comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
                     <input type="text" class="form-control" name="depends_on" id="depends_on" placeholder="Depends on">
                     
                 </p>
