fix error for depends_on in challengebuilder and conflicting div id in html

--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -58,13 +58,13 @@
                 <p>
                     <h5>Challenge Tags</h5>
                     <small id="taghelp" class="form-text text-muted">Comma separated list of single-word or hyphenated-word that represent the category. use singular form if applicable . e.g. "pentest, api, web"</small>
-                    <input type="text" class="form-control" name="tags" id=tags placeholder="Tags">
+                    <input type="text" class="form-control" name="tags" id="tags" placeholder="Tags">
                     
                 </p>
                 <!-- dependencies -->
                 <p>
                     <h5>Challenge Dependencies</h5>
-                    <small id="depends_on" class="form-text text-muted">Comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
+                    <small id="depends_on_help" class="form-text text-muted">Comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
                     <input type="text" class="form-control" name="depends_on" id="depends_on" placeholder="Depends on">
                     
                 </p>
