--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -19,6 +19,8 @@
 </head>
 <body>
     <py-config>
+        [splashscreen]
+            enabled = false
         packages = ["toml"]
     </py-config>
     
