--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -45,13 +45,13 @@
                 <p>
                     <h5>Challenge Title</h5>
                     <small id="title_help" class="form-text text-muted">Make it catchy.</small>
-                    <input type="text" class="form-control" name="title" id="title" placeholder="Title">
+                    <input type="text" class="form-control" name="challenge_title" id="challenge_title" placeholder="Challenge Title">
                 </p>
                 <h5>Challenge Description</h5>
                 <small id="desc_help" class="form-text text-muted">The should provided everything a player needs; links to files or sites and enough description to get started. Remember, you can't edit your challenge once you post it.</small>
                 <p>
                     
-                    <textarea class='form-control' name="description" id="description"  rows="5" width="100%" placeholder="Challenge description here..."></textarea>
+                    <textarea class='form-control' name="challenge_description" id="challenge_description"  rows="5" width="100%" placeholder="Challenge description here..."></textarea>
                     
                 </p>
                 <!-- tags -->
