added  byoc rewards to stats

--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -24,7 +24,7 @@
                                 <tr><td>{{tm[0]}}</td><td>{{tm[1]}}</td></tr>        
                         {% endfor %}
                 </table>
-                <h2>Total {{total}}</h2>
+                <h2>Total Point {{total}} (including {{total_byoc_rewards}} points for your BYOC challenges)</h2>
                 <!-- <h1>User Challenges and Hints</h1> -->
                 <h2>Solved Challenges:</h2>
 				<h5>There may still be some flags in the challenge if it's marked as incomplete.</h5>
