--- a/static/style.css
+++ b/static/style.css
@@ -7,9 +7,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', cursive !important;
 	color:crimson;
-    background: black;
+    background: white;
     position: relative;
 }
 
@@ -24,7 +24,7 @@ body {
     100% {background: rgba(255, 0, 0, 0.15);}
 }
 
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -34,7 +34,7 @@ body {
     color: white;
     position: relative;
     z-index: 2;
-}
+} */
 table{
 	color:crimson;
 	mix-blend-mode: exclusion;
@@ -54,6 +54,9 @@ main {
 
 h2 {
     font-size: 2em;
+}
+footer{
+	padding: 3em;
 }
 
 body::after {
