--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap');
 
 * {
     box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Press Start 2P', cursive !important;
+
 	color:crimson;
     background: white;
     position: relative;
@@ -24,7 +24,7 @@ body {
     100% {background: rgba(255, 0, 0, 0.15);}
 }
 
-/* .container {
+.container {
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -39,22 +39,17 @@ table{
 	color:crimson;
 	mix-blend-mode: exclusion;
 }
-header {
-    padding: 50px;
+h1 {
+    padding: 0px;
+	font-family: 'Libre Barcode 39 Text' !important;
 }
 
 h1 {
     font-size: 3em;
 }
 
-main {
-    text-align: center;
-    padding: 50px;
-}
 
-h2 {
-    font-size: 2em;
-}
+
 footer{
 	padding: 3em;
 }
