--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -38,7 +38,7 @@
             <form onclick="return false">
                 <p>
                     <h5>Author Discord ID</h5>
-                    <small id="authorhelp" class="form-text text-muted">Be sure to include your discriminator (e.g. shyft#0760)</small>
+                    <small id="authorhelp" class="form-text text-muted">we don't use discriminators any more</small>
                     <input type="text" class="form-control" name="author" id="author" placeholder="Enter author discord id">
                     
                 </p>
