--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -99,7 +99,7 @@
         <div id="validateDiv" class="toml"></div>
 
 
-        <h2>Challenge TOML</h2><button onclick="myFunction()">Copy text</button><br>
+        <h2>Challenge TOML</h2><button onclick="myFunction()">Copy TOML to Clipboard</button><br>
         <code id="tomlDiv" class="language-toml">challenge here</code>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js" integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-funky.min.css" integrity="sha512-KaCkQvJ0dQIhdJ0Am5LM3sgXA+Y0LWpbxkfKACZnlOqDvk54lZaWYk/sQiJGNRuSyFpe24jpjwJ4q+u3Rbez5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
