--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css"/>
     <script defer src="https://pyscript.net/latest/pyscript.js"></script> 
    
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.3/vapor/bootstrap.min.css" integrity="sha512-f3fDhRxPxRct3q1hRKC9qEOkqNtlrNCktLDRAOpGFuQLezKoBDUCXPJrEa2VwQilrUj5f7SPx6asfwfKNNwkvw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
@@ -99,7 +101,7 @@
         <div id="validateDiv" class="toml"></div>
 
 
-        <h2>Challenge TOML</h2><button onclick="myFunction()">Copy TOML to Clipboard</button><br>
+        <h2>Challenge TOML</h2><button onclick="copy_text()">Copy TOML to Clipboard</button><br>
         <code id="tomlDiv" class="language-toml">challenge here</code>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js" integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-funky.min.css" integrity="sha512-KaCkQvJ0dQIhdJ0Am5LM3sgXA+Y0LWpbxkfKACZnlOqDvk54lZaWYk/sQiJGNRuSyFpe24jpjwJ4q+u3Rbez5g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -111,20 +113,27 @@
         add_hint()
     </py-script>
     <script>
-    function myFunction() {
+    function copy_text() {
         // Get the text field
-        var copyText = document.getElementById("tomlDiv");
-      
+        targetDiv = document.getElementById("tomlDiv");
+        tmp = document.createElement('textarea');
+        tmp.value = targetDiv.innerHTML;
+
+        targetDiv.appendChild(tmp);
         // Select the text field
-        copyText.select();
-        copyText.setSelectionRange(0, 99999); // For mobile devices
+        tmp.select();
+        tmp.setSelectionRange(0, 99999); // For mobile devices
       
          // Copy the text inside the text field
-        navigator.clipboard.writeText(copyText.value);
+        document.execCommand('copy');
+        targetDiv.removeChild(tmp);
       
         // Alert the copied text
-        alert("Copied the text: " + copyText.value);
-      }
+        Toastify({
+            text: "Copied!",
+            duration: 3000
+            }).showToast();
+        }
     </script>
 </body>
 </html>
