--- a/templates/scoreboard/chall.html
+++ b/templates/scoreboard/chall.html
@@ -8,48 +8,83 @@
         integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc"
         crossorigin="anonymous"></script>
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-<!-- CSS only -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/solar/bootstrap.min.css" integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
+ 	<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+
 </head>
 <body>
-        <div class='container' hx-get="/chall/{{chall.uuid}}" hx-trigger="every 3s" hx-swap="outerHTML">
-                <h1>SOTB Challenge HUD</h1> 
-				<a href="/hud/{{api_key}}" class="href">Back to HUD</a>
-                <div class="chall_info card card-body">
-					<h2>Challenge: {{chall.title}}</h2>
-					<table class="table">
-										<tr><td>UUID</td><td>{{chall.uuid}}</td></tr>
-										<tr><td>Description</td><td>{{chall.description}}</td></tr>
-										<tr><td>Number of Flags</td><td>{{chall.flags|length}}</td></tr>
-										<tr><td>Sum of Flag values</td><td>{{chall_value}}</td></tr>
-									</table>
-				</div>
+	<div class='container' hx-get="/chall/{{chall.uuid}}" hx-trigger="every 2m" hx-swap="outerHTML">
+		<a href="/hud/{{api_key}}" class="href"><h1>SOTB Challenge HUD</h1></a> 
+		<a href="/hud/{{api_key}}" class="href"><h2>Back to User HUD</h2></a> 
+		<div class="chall_info card card-body">
+			<h2>Challenge: {{chall.title}}</h2> {% if team_owned_challenge %}<h2>TEAM OWNED CHALLENGE!!!</h2>{% endif %}
+			<table class="table">
+				<tr><td>UUID</td><td>{{chall.uuid}}</td></tr>
+				<tr><td>Numeric ID</td><td>{{chall.id}}</td></tr>
+				<tr><td>Author</td><td>{{chall.author.name}}</td></tr>
+				<tr><td>Description</td><td>{{chall.description}}</td></tr>
+				<tr><td>Number of Flags</td><td>{{chall.flags|length}}</td></tr>
+				<tr><td>Sum of Flag values</td><td>{{chall_value}}</td></tr>
+			</table>
+		</div>
 
-				<div class="captured_flags card card-body">
-					<h2>Captured Flags</h2>
-					<table class="table">
-						<thead><td>Description</td><td>Flag</td><td>Value</td></thead>
-						{% for flag in captured_flags %}
-								<tr><td>{{flag.description}}</td><td>{{flag.flag}}</td><td>{{flag.value}}</td></tr>        
-						{% endfor %}
-					</table>
-				</div>
-            
+		<div class="captured_flags card card-body">
+			<h2>Captured Flags</h2>{% if team_owned_challenge %}<h2>TEAM OWNED CHALLENGE!!!</h2>{% endif %}
+			<table class="table sortable">
+				<thead>
+					<td>Description</td>
+					<td>Flag</td><td>Value</td>
+				</thead>
 
-                <div class="purchased_hints card card-body">
-					<h2>Purchased Hints:</h2>
-					<table class="table">
-							<thead><td>Challenge ID</td><td>Hint</td><td>Cost</td><td>Hint Purchaser</td></thead>
-							{% for hint in purchased_hints %}
-									<tr><td>{{hint[0]}}</td><td>{{hint[1]}}</td><td>{{hint[2]}}</td><td>{{hint[3]}}</td></tr>
-							{% endfor %}
-					</table>
-				</div>
-        </div>
-		<div class="footer"></div>
+				<tbody>
+				{% for flag in captured_flags %}
+					<tr><td>{{flag.description}}</td><td>{{flag.flag}}</td><td>{{flag.value}}</td></tr>        
+				{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	
+
+		<div class="purchased_hints card card-body">
+			<h2>Purchased Hints:</h2>{% if team_owned_challenge %}<h2>TEAM OWNED CHALLENGE!!!</h2>{% endif %}
+			<table class="table sortable">
+					<thead>
+						<td>Challenge ID</td>
+						<td>Hint</td>
+						<td>Cost</td>
+						<td>Hint Purchaser</td>
+					</thead>
+					<tbody>
+					{% for hint in purchased_hints %}
+						<tr>
+							<td>{{hint[0]}}</td>
+							<td>{{hint[1]}}</td>
+							<td>{{hint[2]}}</td>
+							<td>{{hint[3]}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+
+		<div class="solved_by card card-body">
+			<h2>Solved by:</h2> {% if team_owned_challenge %}<h2>TEAM OWNED CHALLENGE!!!</h2>{% endif %} You may see multiple entries because there may be multiple flags... 
+			<table class="table sortable">
+					<thead>
+						<td>Team</td>
+						<td>Player</td>
+						<td>Time</td>
+					</thead>
+					<tbody>
+					{% for solve in solves %}
+						<tr>
+							<td>{{solve.user.team.name}}</td>
+							<td>{{solve.user.name}}</td>
+							<td>{{solve.time}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
