--- a/templates/scoreboard/index.html
+++ b/templates/scoreboard/index.html
@@ -10,49 +10,18 @@
 		integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc"
 		crossorigin="anonymous"></script>
 
-	<!-- JavaScript Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-		crossorigin="anonymous"></script>
-	<!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
 
 
-	<style>
-		@import url('http://fonts.cdnfonts.com/css/happy-markers');
 
-		body {
-			color: coral;
-			background-color: black;
-			font-family: monospace;
-		}
-
-		button {
-			background-color: aqua;
-		}
-
-		marquee {
-			color: rgb(34, 238, 95);
-			background-color: black;
-			font-size: 64px;
-			font-family: 'Happy markers', sans-serif;
-		}
-
-		textarea {
-			color: rgb(34, 238, 95);
-			background-color: rgb(53, 53, 53);
-			font-size: 24px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="/static/style.css">
 
 </head>
 
 <body>
-	<div class="w-75 p-3">
+	<div class="w-100 p-3 container">
 		<marquee behavior="scroll" direction="">
-			<h1>SoTB2023 Scoreboard</h1>
+			<h1>SOTB2023 Scoreboard</h1>
 		</marquee>
 		<div hx-get="/scores" hx-trigger="every 5s"></div>
 </body>
