--- a/templates/scoreboard/index.html
+++ b/templates/scoreboard/index.html
@@ -23,6 +23,7 @@
 		<marquee behavior="scroll" direction="">
 			<h1>SOTB2023 Scoreboard</h1>
 		</marquee>
+		<h2><a href="/hud">Player HUD</a></h2>
 		<div hx-get="/scores" hx-trigger="every 5s"></div>
 </body>
 
