reversting sorts and table ui

--- a/static/style.css
+++ b/static/style.css
@@ -144,3 +144,14 @@ a:visited {
 a:active {
     color: #e74c3c;
 }
+
+
+table.sortable thead {
+    background-color:#eee;
+    color:#666666;
+    font-weight: bold;
+    cursor: default;
+}
+table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { 
+    content: " \25B4\25BE" 
+}
