--- a/templates/scoreboard/chall.html
+++ b/templates/scoreboard/chall.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous"></script>
 
  	<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-
+	<script src="/static/script.js"></script>
 </head>
 <body>
 	<div class='container' hx-get="/chall/{{chall.uuid}}" hx-trigger="every 2m" hx-swap="outerHTML">
