--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -10,6 +10,8 @@
 
 		<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
+		<script src="/static/script.js"></script>
+
 </head>
 <body>
         <div class='container' hx-get="/hud/{{api_key}}" hx-trigger="every 2m" hx-swap="outerHTML">
