--- a/static/style.css
+++ b/static/style.css
@@ -152,17 +152,12 @@ table.sortable thead {
     font-weight: bold;
     cursor: default;
 }
-table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { 
+table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort)::after { 
     content: " \25B4\25BE" 
 }
 
 
 .spoiler {
-    cursor: pointer;
-    color: #0b3d91;
-    text-decoration: underline;
-  }
-  
-  .hidden-flag {
-    color: black;
+    color: black; 
+    background-color: black; 
   }
